# et_hae_reccon_workspace

./: .gitignore  README.md  pyproject.toml  references_manifest.json  requirements.txt
configs/: et_hae_main_skboy.json  et_hae_smoke.json  reccon_smoke.json
data/final_training/: final_pretrain_trt_scaled.csv
data/finetune_data/: iitb_sa1_sa2_cmcl_scaled.csv
docs/: et_hae_architecture.md
scripts/: check_required_data.sh  download_refs.sh  ensure_reccon_repo.sh  export_reccon_official_candidates.py  patch_reccon_official_runtime.py  predict_heatmap.py  prepare_data.py  run_all_reccon_baselines_3090.sh  run_et_hae_main_skboy.sh  run_et_hae_main_trt.sh  run_reccon_baseline.py  run_reccon_beta_sweep.py  run_reccon_et_hae_rerank.py  run_reccon_official_plus_et_hae.sh  run_reccon_pipeline_with_checkpoint.sh  run_reccon_predicted_et_raw.py  run_reccon_rerank.py  run_smoke_et_hae.sh  setup_gpu_env.sh  setup_reccon_official_env.sh  summarize_results.py  train_et_hae.py  train_reccon_hf_qa.py  train_reccon_hf_qa_3090.sh  train_reccon_official_qa.sh  zip_outputs.sh
src/et_hae_reccon/: __init__.py  constants.py  data.py  et_predictor.py  evaluation.py  heatmap.py  inference.py  losses.py
src/et_hae_reccon/modeling/: __init__.py  et_hae.py
src/et_hae_reccon/reccon/: __init__.py  baseline_adapter.py  data.py  io.py  rerank.py  schemas.py  text.py
tests/: test_data.py  test_heatmap.py  test_model.py  test_reccon_data.py  test_reccon_rerank.py
