[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "et-hae-reccon"
version = "0.1.0"
description = "ET-HAE denoising heatmap model and RECCON reranking experiments"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "torch>=2.0",
  "tqdm>=4.66",
  "transformers>=4.40",
  "huggingface_hub>=0.23",
  "safetensors>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
